--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>rkDefault</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="index.bundle.css">
+  <link rel="stylesheet" href="main.bundle.css">
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -28,6 +28,6 @@
 </div>
 <script src="temp/react.min.js"></script>
 <script src="temp/react-dom.min.js"></script>
-<script src="dist/index.bundle.js"></script>
+<script src="dist/main.bundle.js"></script>
 </body>
 </html>
