updated react/react-dom versions

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
     <!-- /tabs mount -->
   </div>
 </div>
-<script src="temp/react.min.js"></script>
-<script src="temp/react-dom.min.js"></script>
+<!-- <script src="temp/react_16_dev.js"></script> -->
+
+<script src="temp/react_16_prod.min.js"></script>
+<script src="temp/react-dom_16_prod.min.js"></script>
+
 <script src="dist/main.bundle.js"></script>
 </body>
 </html>
