--- a/index.html
+++ b/index.html
@@ -16,21 +16,14 @@
   <![endif]-->
 </head>
 <body>
-<div class="row">
-  <div class="col-sm-3">39</div>
-  <div class="col-sm-9">
-    <!-- tabs mount -->
+  <div>
     <div id="root">
       loading...
     </div>
-    <!-- /tabs mount -->
   </div>
-</div>
-<!-- <script src="temp/react_16_dev.js"></script> -->
-
-<script src="temp/react_16_prod.min.js"></script>
-<script src="temp/react-dom_16_prod.min.js"></script>
-
-<script src="dist/main.bundle.js"></script>
+  <!-- <script src="temp/react_16_dev.js"></script> -->
+  <script src="temp/react_16_prod.min.js"></script>
+  <script src="temp/react-dom_16_prod.min.js"></script>
+  <script src="dist/main.bundle.js"></script>
 </body>
 </html>
